# ros2-dockerized-example

./: README.md  docker-compose.yaml
lidar/: Dockerfile  entrypoint.sh
publisher/: Dockerfile
publisher/sources/src/my_publisher/: CMakeLists.txt  package.xml
publisher/sources/src/my_publisher/src/: main.cpp
subscriber/: Dockerfile
subscriber/sources/src/my_publisher/: CMakeLists.txt  package.xml
subscriber/sources/src/my_publisher/src/: main.cpp
